--- a/manifest.json
+++ b/manifest.json
@@ -68,7 +68,8 @@
                     "<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>"
                 ],
                 "abiFilters" : [ "armeabi-v7a", "x86" ],
-                "schemes" : "firecollegue"
+                "schemes" : "firecollegue",
+                "autoSdkPermissions" : false
             },
             /* ios打包配置 */
             "ios" : {
@@ -83,7 +84,13 @@
             "sdkConfigs" : {
                 "ad" : {},
                 "maps" : {},
-                "oauth" : {},
+                "oauth" : {
+                    "weixin" : {
+                        "appid" : "wx7df5979be4fc5bb8",
+                        "appsecret" : "b1e40fe2436e7c8a85302af76c6c7a26",
+                        "UniversalLinks" : "https://firecollegue.cn/"
+                    }
+                },
                 "payment" : {
                     "appleiap" : {},
                     "weixin" : {
@@ -175,6 +182,22 @@
                     "bought" : 1,
                     "pid" : "521",
                     "parameters" : {}
+                }
+            }
+        },
+        "privacy" : {
+            "prompt" : "template", //可取值template、custom、none  
+            "template" : {
+                //prompt取值为template时有效，用于配置模板提示框上显示的内容  
+                "title" : "服务协议和隐私政策",
+                "message" : "　　请你务必审慎阅读、充分理解“服务协议”和“隐私政策”各条款，包括但不限于：为了更好的向你提供服务，我们需要收集你的设备标识、操作日志等信息用于分析、优化应用性能。<br/>　　你可阅读<a href=\"\">《服务协议》</a>和<a href=\"\">《隐私政策》</a>了解详细信息。如果你同意，请点击下面按钮开始接受我们的服务。",
+                "buttonAccept" : "我知道了",
+                "buttonRefuse" : "暂不同意",
+                "second" : {
+                    "title" : "温馨提示",
+                    "message" : "　　进入应用前，你需先同意<a href=\"/pages/service-argeement/service-argeement\">《服务协议》</a>和<a href=\"/pages/privacy-policy/privacy-policy\">《隐私政策》</a>，否则将退出应用。",
+                    "buttonAccept" : "同意并继续",
+                    "buttonRefuse" : "暂不同意"
                 }
             }
         }
